ajustando git-ignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ x86/
 bld/
 [Bb]in/
 [Oo]bj/
+[Oo]ut/
 [Ll]og/
 [Ll]ogs/
 
@@ -31,6 +32,8 @@ artifacts/
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
 
+**/NotificationAPI/src/Logs/logs/*
+!**/NotificationAPI/src/logs/.gitkeep
 # NuGet Packages
 *.nupkg
 # NuGet Symbol Packages
