--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -26,8 +26,8 @@ services:
         condition: service_healthy
     environment:
       RABBITMQ_HOST: rabbitmq
-      QUEUE_USER_CREATED: Shared.Contracts.Events:UserCreatedIntegrationEvent
-      QUEUE_PAYMENT_PROCESSED: Shared.Contracts.Events:PaymentProcessedEvent
+      QUEUE_USER_CREATED: user-created-event
+      QUEUE_PAYMENT_PROCESSED: payment-processed-event
       MT_LICENSE: Community
     volumes:
       - ./Logs:/app/Logs
