--- a/src/NotificationsAPI.Infrastructure/NotificationsAPI.Infrastructure.csproj
+++ b/src/NotificationsAPI.Infrastructure/NotificationsAPI.Infrastructure.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\Shared.Contracts\Shared.Contracts.csproj" />
     <ProjectReference Include="..\NotificationsAPI.Application\NotificationsAPI.Application.csproj" />
     <ProjectReference Include="..\NotificationsAPI.Domain\NotificationsAPI.Domain.csproj" />
   </ItemGroup>
