--- a/src/NotificationsAPI/NotificationsAPI.Worker.csproj
+++ b/src/NotificationsAPI/NotificationsAPI.Worker.csproj
@@ -19,5 +19,6 @@
     <ProjectReference Include="..\NotificationsAPI.Application\NotificationsAPI.Application.csproj" />
     <ProjectReference Include="..\NotificationsAPI.Domain\NotificationsAPI.Domain.csproj" />
     <ProjectReference Include="..\NotificationsAPI.Infrastructure\NotificationsAPI.Infrastructure.csproj" />
+    <ProjectReference Include="..\Shared.Contracts\Shared.Contracts.csproj" />
   </ItemGroup>
 </Project>
