--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,9 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+############################################
+# Visual Studio
+############################################
+.vs/
+.vscode/
